<resources>
    <string name="app_name">Mastermind</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="new_game">NEW GAME</string>
    <string name="quit">QUIT</string>
    <string name="timer">Timer</string>
    <string name="_00">00</string>
    <string name="gameTitle">ColorCode</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="quitBtn">QUIT</string>
    <string name="playBtn">PLAY</string>
    <string name="roundStatus">You Lose</string>
</resources>